--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="particles-js"></div>
   <div class="content">
-    <h1 class="title">Името на играта !</h1>
+    <h1 class="title">Игра на рими</h1>
     <p class="info">Допълнително информация за това каква е целта на апликацията и как да се играе. Допълнително информация...</p>
     <a href='./game.html' class="start-btn">играй сега</a>
   </div>
