--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <button class = 'back-button' onclick="location.reload()" id='backButton'>Назад</button>
   <div class="button-container" id="buttonContainer">
     
   </div>
