--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
   <div class="button-container" id="buttonContainer">
     
   </div>
-   <script src="/libs/qimessaging/1.0/qimessaging.js"></script>
+   <!-- <script src="/libs/qimessaging/1.0/qimessaging.js"></script> -->
    <script src="./script.js"></script>
 </body>
 </html>
