--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="content">
     <h1 class="title">Игра на рими</h1>
-    <a href='./game.html' class="start-btn">играй сега</a>
+    <a href='./game.html' class="start-btn">Играй сега</a>
   </div>
 </body>
 </html>
